--- a/css/flex2.html
+++ b/css/flex2.html
@@ -52,10 +52,10 @@
 
             display: flex;
             flex-direction: column;
-            justify-content: start;
+            justify-content: flex-start;
+            align-self: flex-end;
             flex-wrap: wrap;
 
-            border: 1px solid gray;
             width: 100%;
             height: 40%;
         }
