--- a/naver/join.html
+++ b/naver/join.html
@@ -90,20 +90,7 @@
 
                 </div>  
 
-                <div class="form-list">
-                    <div class="form-item check-box">
-                        <div class="title-area">
-                            <div class="check-circle">
-                                <input type="checkbox" id="agree-all" class="bilnd">
-                                <label for="agree-all">
-                                    <em class="option-point">[필수]</em>
-                                    <span class="text">인증 약관 전체동의</span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
+                <div class="form-list"></div>
 
             </div>
             <div class="button-submit-wrap">
