--- a/javascript/user_management.html
+++ b/javascript/user_management.html
@@ -49,7 +49,7 @@
             </tr>
         </thead>
         <tbody class="user-table-body">
-            <!-- 자바스크립트로 채워 놓는 것 -->
+            <!-- 자바스크립트로 채워 놓음 -->
 
         </tbody>
     </table>
